--- a/.github/workflows/updatesdk.yml
+++ b/.github/workflows/updatesdk.yml
@@ -2,10 +2,7 @@
 name: Update VRChat Package Resolver Tool from VCC
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch:
   schedule:
     - cron: '0 8 * * *'
 
